--- a/polyanka/index.html
+++ b/polyanka/index.html
@@ -10,8 +10,8 @@
 	<title>Полянка/44</title>
 	<meta name="description" content="" />
 	<meta http-equiv="X-UA-Compatible" content="IE=edge" />
-		<!--<meta name="viewport" content="width=1200">-->
-		<meta name="viewport" content="width=device-width, initial-scale=0.5">
+		<meta name="viewport" content="width=1200">
+		<!--<meta name="viewport" content="width=device-width, initial-scale=0.5">-->
 	<link rel="shortcut icon" href="favicon.png" />
 	<!--<link rel="stylesheet" href="css/normalize.css" />-->
 	<link rel="stylesheet" href="libs/bootstrap/bootstrap-grid-3.3.1.min.css" />
