--- a/porto/index.html
+++ b/porto/index.html
@@ -47,10 +47,10 @@
 		</div>
 				<div class="row">
 					<div class="col-xs-2 menu_but">
-						<p>О ресторане</p>
+						<p>Меню</p>
 					</div>
 					<div class="col-xs-2 menu_but">
-						<p>Меню</p>
+						<p>Резерв</p>
 					</div>
 					<div class="col-xs-4 for_logo">
 						<img src="img/logo-03.png" alt="">
@@ -65,14 +65,15 @@
 			</div>			
 		</div>
 	<div class="for_h1">
-		<h1><span>Porto</span> Maltese</h1>
+		<h1><span>Porto</span> Maltese Vip</h1>
 		<h6>Рыбный ресторан</h6>
 	</div>
+	<!--
 	<div class="for_button">
 		<button class="reserve">
 			<p>Резерв</p>
 		</button>
-	</div>
+	</div>-->
 		
 	</div>
 </header>
@@ -81,7 +82,7 @@
 <section class="section1">
 	<div class="container">
 		<h2>О ресторане</h2>
-		<div class="for_tabs clearfix">
+		<!--<div class="for_tabs clearfix">
 			<div class="tab active tab_1">
 				<p>История ресторана</p>
 			</div>
@@ -91,7 +92,7 @@
 			<div class="tab tab_3">
 				<p>Команда</p>
 			</div>
-		</div>
+		</div>-->
 
 		<div class="content content_history">
 			<div class="row">
