--- a/polyanka/index.html
+++ b/polyanka/index.html
@@ -567,7 +567,7 @@ pdf-презентацию</h6>-->
 	<img src="img/line1.png" alt="" class='line'>
 	<div class="row">
 		<div class="col-xs-3">
-		<a href="img/pho1.jpg" class="fancybox" rel="group"><div class="for_pho">
+		<a href="img/pho1b.jpg" class="fancybox" rel="group"><div class="for_pho">
 			<div class="hov">
 				<img src="img/search.png" alt="" class="search">
 			</div>
@@ -576,7 +576,7 @@ pdf-презентацию</h6>-->
 		</a>
 		</div>
 		<div class="col-xs-3">
-		<a href="img/pho2.jpg" class="fancybox" rel="group"><div class="for_pho">
+		<a href="img/pho2b.jpg" class="fancybox" rel="group"><div class="for_pho">
 			<div class="hov">
 				<img src="img/search.png" alt="" class="search">
 			</div>
@@ -585,7 +585,7 @@ pdf-презентацию</h6>-->
 		</a>
 		</div>
 		<div class="col-xs-3">
-		<a href="img/pho3.jpg" class="fancybox" rel="group"><div class="for_pho">
+		<a href="img/pho3b.jpg" class="fancybox" rel="group"><div class="for_pho">
 			<div class="hov">
 				<img src="img/search.png" alt="" class="search">
 			</div>
@@ -594,7 +594,7 @@ pdf-презентацию</h6>-->
 		</a>
 		</div>
 		<div class="col-xs-3">
-		<a href="img/pho4.jpg" class="fancybox" rel="group"><div class="for_pho">
+		<a href="img/pho4b.jpg" class="fancybox" rel="group"><div class="for_pho">
 			<div class="hov">
 				<img src="img/search.png" alt="" class="search">
 			</div>
