--- a/porto/index.html
+++ b/porto/index.html
@@ -16,6 +16,7 @@
 	<link rel="stylesheet" href="libs/font-awesome-4.2.0/css/font-awesome.min.css" />
 	<link rel="stylesheet" href="libs/fancybox/jquery.fancybox.css" />
 	<link rel="stylesheet" href="libs/owl-carousel/owl.carousel.css" />
+	<link href="https://fonts.googleapis.com/css?family=Lobster+Two" rel="stylesheet"> 
 	<!--<link href="https://fonts.googleapis.com/css?family=Alfa+Slab+One|Baloo+Bhaina|Droid+Serif|Montserrat|Pacifico|Passion+One|Rancho" rel="stylesheet">--> 
 	<link rel="stylesheet" href="libs/countdown/jquery.countdown.css" />
 	<!--<link href="https://fonts.googleapis.com/css?family=Anton|Fira+Sans|Montserrat|Open+Sans+Condensed:700" rel="stylesheet">--> 
@@ -47,7 +48,7 @@
 		</div>
 				<div class="row">
 					<div class="col-xs-2 menu_but">
-						<p>Меню</p>
+						<p style="font-family:'Lobster'">Меню</p>
 					</div>
 					<div class="col-xs-2 menu_but">
 						<p>Резерв</p>
@@ -56,7 +57,7 @@
 						<img src="img/logo-03.png" alt="">
 					</div>
 					<div class="col-xs-2 menu_but">
-						<p>Галерея</p>
+						<p style="font-family: 'Marks'">Галерея</p>
 					</div>
 					<div class="col-xs-2 menu_but">
 						<p>Контакты</p>
@@ -65,7 +66,7 @@
 			</div>			
 		</div>
 	<div class="for_h1">
-		<h1><span>Porto</span> Maltese Vip</h1>
+		<h1>Porto Maltese <span>vip</span></h1>
 		<h6>Рыбный ресторан</h6>
 	</div>
 	<!--
@@ -96,12 +97,18 @@
 
 		<div class="content content_history">
 			<div class="row">
-				<div class="col-xs-4">
+				<div class="col-xs-5">
 					<p>
-						Компания <b>Porto Maltese</b> была основана в 1989 году на Мальте. Ее деятельностью была торговля свежей рыбой и морепродуктами. Некоторое время спустя, возник и первый рыбный ресторан "Porto Maltese", положивший начало целой сети ресторанов средиземноморской кухни по всему миру.
+						Наша политика- использование только высококачественных, свежайших морепродуктов. Вот почему с разных концов средиземноморья в ресторан «Porto Maltese Vip» мы привозим свежевыловленные дары моря: свыше двадцати сортов рыбы, моллюсков, ракообразных. 
+						Приемлемые цены и отсутствие порционных блюд (что касается морепродуктов) - наши принципы работы. Вы сами выбираете размер рыбы. Наш ресторан и для гурманов, привыкших к эксклюзивным рыбным ресторанам, и для людей, которые только начинают знакомство с лучшими сторонами морской кухни.  
+						<br>
+						Наша особенность состоит в подаче рыбных блюд. В принципе, она характерна для хорошего рыбного ресторана, но в Москве такое увидишь нечасто. Возле витрины, сверкающей тысячами осколков льда и пестрыми обитателями моря вы сами выбираете рыбу и морепродукты и обсуждаете с поваром то, каким способом для вас это будут готовить. Есть семь вариантов: на гриле; лешо (вареная в воде); в соли (морской, конечно); на бумаге (с овощами), "по домашнему" (в духовке), рыба на пару, "а-ля дуле"(очень вкусно), а также по Вашему рецепту. 
+						<br>  
+						Для настоящих ценителей средиземноморской кухни скажем, что на витрине можно встретить свежую северную акулу и ската, ставших достойным дополнением к дорадо, морскому волку, зубатке, морскому языку, морскому черту, барабульке и другим сортам рыбы.   
+						Не забыты и разнообразные моллюски. Кальмары, каракатицы и осьминоги появятся на вашем столе в качестве горячей закуски, в форме салата, в качестве карпаччо (нарезанными на тонкие филеты, в соли, с капелькой бальзамического винного уксуса и масла). И, разумеется, продукция нашего аквариума: всевозможные живые мидии, устрицы, гребешки, лобстеры и раки могут быть приготовлены на гриле или по специальным домашним рецептам. Все это морское великолепие дополняется различными салатами, изумительным домашним хлебом, и конечно, отличными белыми винами (представлены Испания, Франция, Италия, Чили, Хорватия и Сербия).  
 					</p>
 				</div>
-				<div class="col-xs-8">
+				<div class="col-xs-7">
 					<img src="img/1.jpg" alt="" class="history_img">
 				</div>
 			</div>
