--- a/dance/index.html
+++ b/dance/index.html
@@ -33,13 +33,13 @@
 		 		</div>
 	
  			<div class="col-md-5 address">
- 				<img src="images/Map_Icon.png" alt="">	
- 				<span>Адрес: Московская область,  г. Зеленоград,<br>Озерная аллея дом 4с5, Технопарк 
+ 				<img src="images/map_Icon.png" alt="">	
+ 				<span>Адрес: Московская область, г. Зеленоград,<br>Озерная аллея дом 4с5, Технопарк 
  				&laquo;Элма&raquo;</span>
  			</div> 
   	
   		<div class="col-md-3 phone">
-  			<img src="images/Phone_Icon.png">
+  			<img src="images/phone_Icon.png">
   			<span>8(926)133-78-10</span>
   			<a href="#">Перезвоните мне</a>
   		</div>
