--- a/dance/index.html
+++ b/dance/index.html
@@ -219,7 +219,7 @@
       <div class="col-xs-6">
         <p class="sect4__text">Танцы европейской программы — это потрясающая осанка, безупречные манеры, фраки темных тонов с бабочкой у мальчиков и эффектные вечерние платья у девочек. </p>
   <button class="buttonb section4__button" style="  background-color: rgb(88, 210, 175);
-  box-shadow: 0px 6px 32px 0px rgba(88, 210, 175, 0.48) margin-top:80px;
+  box-shadow: 0px 6px 32px 0px rgba(88, 210, 175, 0.48); margin-top:80px;
 ">
     <p>Записаться на пробное занятие</p>
   </button>
