--- a/dance/index.html
+++ b/dance/index.html
@@ -133,7 +133,7 @@
       <div class="col-sm-4">
         <p>Развивающие танцы для детей</p>
       </div>
-      <div class="col-sm-1"></div>
+      <div class="col-sm-1 for_divider"></div>
       <div class="col-sm-6">
         <button>
           <p>от 3 до 5 лет</p>
@@ -145,7 +145,7 @@
       <div class="col-xs-5">
         <img src="images/img1.png" alt="" class="my_img">
       </div>
-      <div class="col-xs-1">
+      <div class="col-xs-1 for_divider">
         
       </div>
       <div class="col-xs-6">
@@ -167,7 +167,7 @@
       <div class="col-sm-4">
         <p style="margin-left: -30px;">Латиноамериканская программа</p>
       </div>
-      <div class="col-sm-1"></div>
+      <div class="col-sm-1 for_divider"></div>
       <div class="col-sm-6">
         <button style="width:auto;padding-left:15px; padding-right:15px;">
           <p style="color:#ff984f">Самба, ча-ча-ча, румба, пасодобль, джайв</p>
@@ -179,7 +179,7 @@
       <div class="col-xs-5">
         <img src="images/img2.png" alt="" class="my_img">
       </div>
-      <div class="col-xs-1">
+      <div class="col-xs-1 for_divider">
         
       </div>
       <div class="col-xs-6">
