--- a/dance/index.html
+++ b/dance/index.html
@@ -16,8 +16,21 @@
 <link rel="stylesheet" href="css/fonts.css">
 <link rel="stylesheet" href="css/style.css">
 </head>
-[<body>
-
+<body>
+<div class="modal_bg"></div>
+<div class="modal">
+  <div class="to_close">
+    <img src="images/close.png" alt="">
+  </div>
+   <h6>Оставьте ваши данные <br>и мы вам перезвоним</h6>
+   <form action="">
+     <input type="text" name="name" class="modal_input input_name" placeholder="Введите ваше имя">
+     <input type="text" name="phone" class="modal_input input_phone" placeholder="Введите ваш телефон">
+     <button class="modal_button">
+       <p>Перезвоните мне</p>
+     </button>
+   </form>
+</div>
 <header>
 <div class="container">
 <div class="contacts">
@@ -257,21 +270,314 @@
 <section class="professionals">
 <div class="container">
   <div class="row">
-    <div class="col-xs-7"> 
+    <div class="col-xs-8"> 
       <h2>Вашего ребенка будут обучать<br> профессионалыные спортсмены</h2>
     </div>
   </div>
   <div class="row">
-    <div class="col-xs-6 sporsmen_profile">
+    <div class="col-xs-6 sportsman_profile sportsman_profile1">
     <img src="images/sportsman1.png" alt="" class="sportman_avatar">
-    <p class="sportsmen_name"></p>
+    <div class="sportsman_descr"><h6 class="sportsman_name">Маргарита Белова</h6>
+    <p class="sportsman_who">танцор международного класса 
+лично ведет 80% занятий 
+</p></div>
+    <div class="for_sportsman_text">
+    <p class="sportsman_text">Cвое призвание вижу в раскрытии скрытого потенциала каждого ребенка. Мы все по природе уникальны, в нас живет творческая личность. 
+Прекрасно,когда рядом есть учителя, воспитатели которые помогают это сделать.</p>
     </div>
-    <div class="col-xs-6 sporsmen_profile"></div>
+    </div>
+    <div class="col-xs-6 sportsman_profile sportsman_profile2">
+    <img src="images/sportsman2.png" alt="" class="sportman_avatar">
+     <div class="sportsman_descr"><h6 class="sportsman_name">Рысин Павел</h6>
+    <p class="sportsman_who" style="margin-top:-10px">педагог-балетмейстер, окончил 
+Московскую академию 
+образования Натальи Нестеровой
+</p></div>
+    <div class="for_sportsman_text">
+    <p class="sportsman_text">«Я — фанат. Сколько себя помню, занимаюсь танцами. Просыпаюсь утром после станцованного во сне турнира и засыпаю с идеями по поводу новой хореографической связки. 
+Даже сегодня, когда я закончил конкурсную карьеру, я на паркете — только в качестве педагога и тренера. Я чувствую непреодолимое желание передавать опыт и знания, чтобы люди ощутили те эмоции, ту любовь и страсть к танцу, которые у меня внутри навсегда. 
+Именно поэтому успехи в танцах учеников — очень личное для меня. Стараюсь сделать всё и даже чуточку больше, чтобы вытянуть из моих учеников максимум их танцевального Я. </p>
+    </div>
+    </div>
   </div>
  
 </div>
   
 </section>
+
+ 
+
+
+<section class="for_mans">
+  <div class="container">
+    <h2>Мальчики, которые занимаются бальными танцами 
+имеют идеальную фигуру</h2>
+<div class="row">
+  <div class="col-xs-6 col-xs-offset-6">
+    <h6>Ребята танцоры:</h6>
+    <div class="row">
+      <div class="col-xs-4">
+        <img src="images/man_icon1.png" alt="" class="for_man_icon">
+        <p>Имеют красивую фигуру</p>
+      </div>
+      <div class="col-xs-4">
+        <img src="images/man_icon2.png" alt="" class="for_man_icon">
+        <p>Не знают проблем с осанкой</p>
+      </div>
+      <div class="col-xs-4">
+        <img src="images/man_icon3.png" alt="" class="for_man_icon">
+        <p>Более уверены в себе</p>
+      </div>
+    </div>
+    <p class="bottom">
+      У нас идет набор мальчиков в группу<br>
+«Начинающие 6–9 лет». Успейте записать сына.
+    </p>
+  </div>
+</div>
+  </div>
+</section>
+
+<section class="section3">
+<img src="images/stars.png" alt="" class="my_absol3">
+<div class="container">
+  <div class="row">
+    <div class="col-sm-7 Order1">
+      <h2>Приходите с ребенком на<br>
+        бесплатное пробное занятие</h2>
+        <p>99% людей, которые пришли на пробное, продолжают заниматься в школе Приводите ребенка завтра, уверены, вам понравится.</p>
+      </div>
+      <div class="col-sm-5 Order2">
+        <img src="images/logo.png" alt="" class="Order2__img">
+        <p class="Order2__text">Чтобы записаться заполните форму</p>
+        <form action="">
+          <input type="text" class="Order2__input" placeholder="Введите Ваш телефон">
+          <button class="button Order2__button">
+            <p>Записаться на пробное занятие</p>
+          </button>
+        </form>
+      </div>
+    </div>
+  </div>
+</section>
+
+
+<section class="our_club">
+  <div class="container">
+    <h2>В зале есть чем заняться</h2>
+    <div class="row">
+      <div class="col-xs-4">
+        <img src="images/club_img.png" alt="">
+        <p>Идеальная чистота</p>
+      </div>
+      <div class="col-xs-4">
+        <img src="images/club_img.png" alt="">
+        <p>Новые зеркала</p>
+      </div>
+      <div class="col-xs-4">
+        <img src="images/club_img.png" alt="">
+        <p>Диванчики для родителей</p>
+      </div>
+    </div>
+  </div>
+</section>
+
+
+<section class="pink_line">
+  <div class="container">
+    <div class="row">
+      <div class="col-xs-1">
+        <img src="images/pink1.png" alt="" style="text-align:left">
+      </div>
+      <div class="col-xs-10">
+        <h3>Ребенку будет приятно заниматься у нас, а вам удобно 
+наблюдать за его успехами.</h3>
+      </div>
+      <div class="col-xs-1">
+        <img src="images/pink2.png" alt="" style="text-align:right">
+      </div>
+    </div>
+  </div>
+</section>
+
+<section class="big_gallery">
+  <div class="container">
+  <div class="row">
+  <div class="col-xs-10 col-xs-offset-1">
+      <div class="big_img">
+        <img src="images/bigphoto1.png" alt="">
+      </div>
+    </div>
+  </div>
+  <div class="row">
+  <div class="col-xs-10 col-xs-offset-1">
+    <div class="col-my-2">
+      <img src="images/gallery1.png" alt="" class="gallery_photo">
+    </div>
+    <div class="col-my-2">
+      <img src="images/gallery2.png" alt="" class="gallery_photo">
+    </div>
+    <div class="col-my-2">
+      <img src="images/gallery3.png" alt="" class="gallery_photo">
+    </div>
+    <div class="col-my-2">
+      <img src="images/gallery4.png" alt="" class="gallery_photo">
+    </div>
+    <div class="col-my-2">
+      <img src="images/gallery5.png" alt="" class="gallery_photo">
+    </div>
+    </div>
+  </div>
+
+  
+  </div>
+</section>
+
+<section class="kids">
+  <div class="container">
+    <h2>
+      Уже через 3 месяца дети занимают призовые <br> 
+места на соревнованиях
+    </h2>
+    <h6>Соревновательная атмосфера на занятиях помогает быстро расти в профессиональном <br> 
+плане, поэтому некоторые ребята уже через 3 месяца начинают завоевывать кубки.</h6>
+  </div>
+  <div class="container container2">
+    <div class="row">
+      <div class="col-xs-5">
+      <img src="images/kid1.png" alt="" class="kid">
+      </div>
+      <div class="col-xs-6">
+        <p class="name">Лана</p>
+        <button>
+          <p style="color:#3ac1df">за 3 месяца 5 кубков</p>
+        </button>
+          <p>С Ланой мы начали с нуля. Поначалу девочка была зажата и не слышала музыку. 
+<br><br>
+За 3 месяца мы изучили 5 танцев, взяли 5 кубков, а также развили  артистичность, эмоциональность, слух и пластику. Родители выразили огромную благодарность в развитии их дочки.
+</p>
+      </div>
+    </div>
+    <div class="row">
+      <div class="col-xs-5">
+      <img src="images/kid2.png" alt="" class="kid">
+      </div>
+      <div class="col-xs-6">
+        <p class="name">Настя</p>
+        <button>
+          <p style="color:#ff974d">6 месяцев тренировок. Берет призовые места 
+на каждом соревновании</p>
+        </button>
+          <p>Настя — очень настойчивая и влюбленная в бальный танец. Первые 2 месяца мы только слушали музыку и не спешили. Спустя полгода, тренировки принесли результат: призовые места на каждом конкурсе, в котором участвует Настя.  
+</p>
+      </div>
+    </div>
+    <div class="row">
+      <div class="col-xs-5">
+      <img src="images/kid3.png" alt="" class="kid">
+      </div>
+      <div class="col-xs-6">
+        <p class="name">Ульяна</p>
+        <button>
+          <p style="color:#5ad2b1">за полгода стала взяла 15 кубков</p>
+        </button>
+          <p>Год назад Ульяна стояла на последнем, 7 месте, в категории H3. 
+<br><br>
+Сегодня — призер и победительница 15 соревнований в категории H5.
+
+</p>
+      </div>
+    </div>
+  </div>
+</section>
+
+
+
+<section class="attention">
+  <div class="container">
+    <h2>Каждому маленькому чемпиону — <br>
+максимум внимания</h2>
+<p>Занятия проходят в маленьких группах до 10 человек. <br>
+После урока тренер дает обратную связь каждому ребенку. </p>
+  </div>
+</section>
+
+
+
+
+<section class="groups">
+  <div class="container">
+    <h2>Расписание групповых занятий</h2>
+    <div class="row">
+      <div class="col-xs-3">
+        <div class="group group1">
+          <p class="name">Младшая группа 
+3-5 лет</p>
+          <img src="images/logo2.png" alt="" class="groups_logo">
+          <p>Абонемент на 8 групповых занятий 
+в месяц, 2 раза в неделю по 60 минут</p>
+          <p class="rasp">Расписание обсуждается 
+индивидуально</p>
+          <div class="price">
+            <p>3 499 ₽</p>
+          </div>
+          <button class="button">
+            <p>Купить абонемент</p>
+          </button>
+        </div>
+      </div>
+      <div class="col-xs-3">
+        <div class="group group2">
+          <p class="name">Старшая группа 
+6-9 лет</p>
+          <img src="images/logo2.png" alt="" class="groups_logo">
+          <p>Абонемент на 8 групповых занятий 
+в месяц, 2 раза в неделю по 90 минут</p>
+          <p class="rasp">Расписание обсуждается 
+индивидуально</p>
+          <div class="price">
+            <p>3 999 ₽</p>
+          </div>
+          <button>
+             <p>Купить абонемент</p></button>
+        </div>
+      </div>
+      <div class="col-xs-3">
+        <div class="group group3">
+          <p class="name" style="text-align:center"> Индивидуальный <br> урок</p>
+          <img src="images/logo2.png" alt="" class="groups_logo">
+          <p >100% внимания тренера сконцентрировано 
+на ученике 
+Длительность 60 минут</p>
+          <p class="rasp">Расписание обсуждается 
+индивидуально</p>
+          <div class="price">
+            <p>2 499 ₽</p>
+          </div>
+          <button>
+            <p>Купить абонемент</p></button>
+        </div>
+      </div>
+      <div class="col-xs-3">
+        <div class="group group4" style="padding-bottom:0px">
+          <p class="name">Консультации<br> <span>для подготовки к <br>соревнованиям</span></p>
+          <img src="images/logo2.png" alt="" class="groups_logo">
+          <p>Наш стилист сделает профессиональную прическу, макияж и поможет создать образ, который впечатлит судей</p>
+          
+          <div class="price">
+            <p>Индивидуально </p>
+          </div>
+          
+        </div>
+        <button class="sep_but">
+            <p>Оставить заявку</p></button>
+        </div>
+      </div>
+    </div>
+  </div>
+</section>
+
+
 
 
 <section class="card">
@@ -291,9 +597,6 @@
     </div>
   </div>
 </section>
-
-
-
 
 
 <section class="reviews">
@@ -365,6 +668,18 @@
 
 
     <section class="for_map">
+    <div class="container" style="position:relative">
+      <div class="map_contacts">
+        <h2>Контакты</h2>
+        <p class="p1">Телефон</p>
+        <p class="p2">+7 (926) 133-78-10</p>
+        <p class="p1">Адрес</p>
+        <p class="p2">г. Зеленоград, Озерная Аллея<br>
+4с5, Технопарк «Элма»</p>
+<img src="images/insta.png" alt="" style="margin-right:25px">
+<img src="images/vk.png" alt="">
+      </div>
+      </div>
       <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1116.010455606806!2d37.220128821576175!3d55.98366699847358!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x46b51509782b9e31%3A0xd63423269c97a2a!2z0J7Qt9C10YDQvdCw0Y8g0LDQu9C70LXRjywgNNGBNSwg0JfQtdC70LXQvdC-0LPRgNCw0LQsINCzLiDQnNC-0YHQutCy0LAsIDEyNDQ4Mg!5e0!3m2!1sru!2sru!4v1490343305531" width="100%" height="450" frameborder="0" style="border:0" allowfullscreen></iframe>
     </section>
     <footer>
@@ -397,6 +712,22 @@
 
   <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
+  <script>
+    $("button").click(function(){
+      $(".modal_bg").addClass("active");
+      $(".modal").addClass("active");
+    })
+
+    $("modal_bg").click(function(){
+      alert("fuck");
+      if($('modal_bg').hasClass('active')){
+        alert("hello");
+      $(".modal_bg.active").removeClass("active");
+      $(".modal.active").removeClass("active");
+      }
+    })
+
+  </script>
   <!-- Include all compiled plugins (below), or include individual files as needed -->
   <script src="js/bootstrap.min.js"></script>
 </body>
