--- a/porto/index.html
+++ b/porto/index.html
@@ -196,7 +196,7 @@
 
 <section class="gallery">
 	<div class="container-fluid">
-		<h2>Галлерея</h2>
+		<h2>Галерея</h2>
 		<div class="row">
 			<div class="col-xs-4">
 				<div class="for_img for_img1"></div>
