--- a/naves/index.html
+++ b/naves/index.html
@@ -5,7 +5,7 @@
         <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
         <meta name="description" content="Fancy Sliding Form with jQuery" />
         <meta name="keywords" content="jquery, form, sliding, usability, css3, validation, javascript"/>
-        
+        <meta name="viewport" content="width=1200">
         <link rel="stylesheet" href="css/bootstrap-grid-3.3.1.min.css" type="text/css" media="screen"/>
         <link rel="stylesheet" href="css/styl.css" type="text/css" media="screen"/>
         <link rel="stylesheet" href="css/mystyle.css" type="text/css" media="screen"/>
