--- a/borodist/index.html
+++ b/borodist/index.html
@@ -18,8 +18,8 @@
 	<link rel="stylesheet" href="libs/owl-carousel/owl.carousel.css" />
 	<link rel="stylesheet" href="libs/owl-carousel/owl.theme.css" />
 	<link rel="stylesheet" href="libs/countdown/jquery.countdown.css" />
-	<link href="http://allfont.ru/allfont.css?fonts=ozhandicraft-wgl4-bt-roman" rel="stylesheet" type="text/css" />
-	  <link href="http://allfont.ru/allfont.css?fonts=adlib-wgl4-bt" rel="stylesheet" type="text/css" />
+	<!--<link href="http://allfont.ru/allfont.css?fonts=ozhandicraft-wgl4-bt-roman" rel="stylesheet" type="text/css" />
+	  <link href="http://allfont.ru/allfont.css?fonts=adlib-wgl4-bt" rel="stylesheet" type="text/css" />-->
 
 	<link rel="stylesheet" href="css/fonts.css" />
 	<link rel="stylesheet" href="css/main.css" />
@@ -523,7 +523,7 @@
       $(".owl-prev").click(function(){
       a = $(".item.active").next();
       	$(".item.active").removeClass("active");
-      	
+
       })
 </script>
 	<script src="js/common.js"></script>
