--- a/borodist/index.html
+++ b/borodist/index.html
@@ -10,7 +10,7 @@
 	<title></title>
 	<meta name="description" content="" />
 	<meta http-equiv="X-UA-Compatible" content="IE=edge" />
-	<meta name="viewport" content="width=device-width, initial-scale=0.5, maximum-scale=1" />
+	<meta name="viewport" content="width=1000, initial-scale=0.5, maximum-scale=1" />
 	<link rel="shortcut icon" href="favicon.png" />
 	<link href="css/lightbox.css" rel="stylesheet">
 	<link rel="stylesheet" href="libs/bootstrap/bootstrap-grid-3.3.1.min.css" />
