--- a/borodist/index.html
+++ b/borodist/index.html
@@ -46,7 +46,7 @@
 	</p>
 	<p>Добавить инициалы?</p>
 	<div class="select_div">
-	<input type="radio" name="option" value="1" id="radio1"/>
+	<input type="radio" name="option" value="1" id="radio1" checked/>
     <label for="radio1" class="label" id="label1">
     	<p>Нет <span class="for_item"></span></p>
     </label>
