--- a/borodist/index.html
+++ b/borodist/index.html
@@ -148,7 +148,7 @@
 	  				<div class="item">
 						<div class="bag">
 	  						<img src="img/bag2.png" alt="">
-	  						<p>Цвет: Gray</p>
+	  						<p>Цвет: Dark Blue</p>
 	  					</div>
 	  				</div>
 	  			
@@ -169,19 +169,19 @@
 	  				<div class="item">
 						<div class="longer">
 	  						<img src="img/longer2.png" alt="">
-	  						<p>Цвет: Dark-Blue</p>
+	  						<p>Цвет: Cherry</p>
 	  					</div>
 	  				</div>
 	  				<div class="item">
 						<div class="longer">
 	  						<img src="img/longer3.png" alt="">
-	  						<p>Цвет: Dark-Blue</p>
+	  						<p>Цвет: Cognac</p>
 	  					</div>
 	  				</div>
 	  				<div class="item">
 						<div class="longer">
 	  						<img src="img/longer4.png" alt="">
-	  						<p>Цвет: Dark-Blue</p>
+	  						<p>Цвет: Gray</p>
 	  					</div>
 	  				</div>
 	  			
