--- a/naves/index.html
+++ b/naves/index.html
@@ -112,7 +112,7 @@
                                 <h4>Узнайте стоимость навеса за 1 минуту</h4>
                                 <h5>Ответьте на 4 вопроса и получите смету стоимости навеса и 3D макет</h5>
                                 <legend>Укажите планируемый тип кровли:</legend>
-                                <p> 
+                                <p style="white-space:nowrap"> 
                                     <input type="radio" name="kind" value="1" id="radio1_1"/>
                                     <label for="radio1_1"><span class="for_item active"></span>Односкатный</label>
                                     <img src="images/type1.jpg" alt="" class="type">
