--- a/naves/index.html
+++ b/naves/index.html
@@ -254,6 +254,7 @@
   color: rgb(45, 45, 45);
   margin-left:0px;
   font-weight: bold;
+  padding-right: 10px;
   margin-top:0px;
   text-transform: uppercase;
   line-height: 36px;
@@ -485,8 +486,7 @@ NAVES-KOVKA</a>
  });
 
 
-
-            $("#form1").submit(function() {
+  $("#formElem").submit(function() {
         $.ajax({
             type: "POST",
             url: "mail.php",
