--- a/borodist/index.html
+++ b/borodist/index.html
@@ -36,9 +36,9 @@
 <div class="modal modal1">
 <div class="cross"></div>
 	<h2>Заказ звонка</h2>
-	<form action=""><p>
-		Здравствуйте, меня зовут <input type="text" class="modal_input" placeholder="Ваше имя">                 и я хочу задать Вам пару вопросов, поэтому перезвоните пожалуйста на номер
-		      <input type="text" placeholder="Ваш номер " 	 class="modal_input">          
+	<form  id="form1"><p>
+		Здравствуйте, меня зовут <input type="text" name="name" class="modal_input" placeholder="Ваше имя">                 и я хочу задать Вам пару вопросов, поэтому перезвоните пожалуйста на номер
+		      <input type="text" placeholder="Ваш номер " name="phone" 	 class="modal_input">          
 	</p>
 	<!--<p class="opt">
 		Опции
@@ -60,9 +60,9 @@
 <div class="modal modal2">
 <div class="cross"></div>
 	<h2 style="font-size:41px; padding-top:15px;">Заказ комплекта</h2>
-	<form action=""><p>
-		Здравствуйте, меня зовут <input type="text" class="modal_input" placeholder="Ваше имя">                  и я хочу заказать у Вас этот 
-чудесный комплект. Перезвоните мне на номер      <input type="text" placeholder="Ваш номер " 	 class="modal_input">           так как
+	<form  id="form2"><p>
+		Здравствуйте, меня зовут <input type="text" name="name" class="modal_input" placeholder="Ваше имя">                  и я хочу заказать у Вас этот 
+чудесный комплект. Перезвоните мне на номер      <input type="text" name="phone"  placeholder="Ваш номер " 	 class="modal_input">           так как
 у меня есть пару вопросов и я хочу подтвердить свой заказ.        
 	</p>
 	<!--<p class="opt">
@@ -592,6 +592,7 @@
 	<script src="js/jquery.countdown.min.js"></script>
 	<script src="js/viewportchecker.js"></script>
 	<script src="libs/landing-nav/navigation.js"></script>
+	<script src="js/jquery.nicescroll.min.js" ></script>
 	<!--<script src="js/lightbox.js"></script>-->
 	<script type="text/javascript">
   $("#getting-started")
@@ -603,6 +604,7 @@
      $(".sec").text(
       event.strftime('%S'));
   });
+  $("html").niceScroll();
 
 
 
@@ -801,10 +803,38 @@
 	return false;
 });
 
+     $("#form1").submit(function() {
+		$.ajax({
+			type: "GET",
+			url: "mail.php",
+			data: $("#form1").serialize()
+		}).done(function() {
+			alert(" Спасибо за заявку, наш менеджер свяжется с Вами в течение 15 минут.");
+			setTimeout(function() {
+			$(".bg_modal").removeClass("active");
+     		$(".modal").removeClass("active");
+			}, 1000);
+		});
+		return false;
+	});
+      $("#form2").submit(function() {
+		$.ajax({
+			type: "GET",
+			url: "mail.php",
+			data: $("#form2").serialize()
+		}).done(function() {
+			alert(" Спасибо за заявку, наш менеджер свяжется с Вами в течение 15 минут.");
+			setTimeout(function() {
+			$(".bg_modal").removeClass("active");
+     		$(".modal").removeClass("active");
+			}, 1000);
+		});
+		return false;
+	});
    	
 </script>
-
-	<script src="js/common.js"></script>
+<!--
+	<script src="js/common.js"></script>-->
 	<!-- Yandex.Metrika counter --><!-- /Yandex.Metrika counter -->
 	<!-- Google Analytics counter --><!-- /Google Analytics counter -->
 </body>
